# pdra

./: .gitignore  README.md  config.toml  configs.toml  pyproject.toml  requirements.txt
code/: experiments.py  main.py  results_plot.py
data/CP/results/: node_1.npz  node_10.npz  node_11.npz  node_12.npz  node_13.npz  node_14.npz  node_15.npz  node_2.npz  node_3.npz  node_4.npz  node_5.npz  node_6.npz  node_7.npz  node_8.npz  node_9.npz
data/Collaborative Production/: cons_iter.xlsx  err.xlsx
data/DQP/results/: node_1.npz  (+8 more)
data/Distributed Quadratic Programming/: cons_iter.xlsx  err.xlsx
data/experiment1/: D.xlsx  cons_iter.xlsx  err.xlsx
data/experiment2/: b_mat.xlsx  cons_iter.xlsx  err.xlsx
dissys/: __init__.py  dissys.py  edge.py  node.py
docs/notebooks/: licq.ipynb  truncated_laplace.ipynb
examples/co_production/: main.ipynb
examples/distributed_qp/: main.ipynb
exp/: README.md  co_production.ipynb  configs.toml  distributed_qp.ipynb  licq_illustration.ipynb
exp/co_production/: main.ipynb  server.ipynb
exp/distributed_qp/: main.ipynb  server.ipynb
exp/licq_illustration/: main.ipynb
exp/scripts/: co_production.py  licq_illustration.py
pdra/: __init__.py  pdra.py
scripts/: co_production.py  distributed_qp.py  experiment_1.py  experiment_2.py  licq_illustration.py  plot_options.py
src/pdra/: __init__.py  allocator.py  baselines.py  network.py  optimizer.py  truncated_laplace.py  utils.py
test/: consensus.py  distributed_qp.ipynb  distributed_qp.py  truncated_laplace.ipynb  truncated_laplace.py
test/configs/: distributed_qp.toml  truncated_laplace.toml
test/distributed_qp/: distributed_qp.ipynb  server.ipynb
tests/: truncated_laplace.py
tests/distributed_qp/: distributed_qp.ipynb  server.ipynb
tests/truncated_laplace/: truncated_laplace.ipynb
trunclap/: __init__.py  truncated_laplace.py
(+242 files in other folders)
