[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "pdra"
version = "0.1.0"
description = "Private Distributed Resource Allocation"
authors = [{ name = "Rui Huang", email = "R.Huang@lboro.ac.uk" }]

dependencies = [
    "cvxpy[GLPK]>=1.4.3",
    "topolink @ git+https://github.com/rui-huang-opt/topolink.git@0.2.3",
]

[project.optional-dependencies]
vis = ["matplotlib>=3.10.3"]
vsc = ["ipykernel>=6.29.5"]

[tool.setuptools.packages.find]
where = ["src"]
