[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "pdra"
version = "0.1.0"
description = "Private Distributed Resource Allocation"
authors = [{ name = "Rui Huang", email = "R.Huang@lboro.ac.uk" }]

dependencies = [
    "cvxpy[GLPK]>=1.4.3",
    "conops @ git+https://github.com/rui-huang-opt/conops.git@0.1.0",
]

[project.optional-dependencies]
examples = ["matplotlib>=3.10.3", "networkx>=3.4.2"]
notebook = ["ipykernel>=6.29.5"]

[tool.setuptools.packages.find]
where = ["src"]
